<resources>
    <string name="app_name">Lab</string>
    <string name="test">Cualquier valor</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="sum">+</string>
    <string name="x">x</string>
    <string name="zero">0</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="result">Result</string>
    <string name="clean">clean</string>
    <string name="div">/</string>
    <string name="res">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
</resources>